--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "league/color-extractor": "0.3.*",
         "league/fractal": "^0.17.0",
         "spatie/laravel-fractal": "^5.5"
     },
